# graphtog

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_USAGE_GRAPHRAG.md  AUTH_AND_UPLOAD_FIX.md  AUTH_FIX_ACTION_SUMMARY.md  CLAUDE.md  FIX_MENTIONS_RELATIONSHIP.md  GRAPHRAG_BEFORE_AFTER.md  GRAPHRAG_FIX_IMPLEMENTATION_GUIDE.md  GRAPHRAG_FIX_SUMMARY_VI.md  GRAPHRAG_IMPLEMENTATION_ANALYSIS.md  GRAPHRAG_IMPLEMENTATION_COMPLETED.md  GRAPHRAG_IMPLEMENTATION_FIX.md  GRAPHRAG_QUICK_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICKFIX_CHECKLIST.md  QUICK_START_GRAPHRAG.md  QWEN.md  README.md  README_GRAPHRAG_IMPLEMENTATION.md  TOG_ENHANCEMENT_BUGFIX.md  TOG_ENHANCEMENT_SOLUTION_2_5.md  TOG_TIMEOUT_FIX.md  TOKEN_EXPIRATION_FIX.md  UPLOAD_PROCESSING_FIX.md  current_project-amp.md  current_project-codex.md  current_project-cursor.md  current_project-qwen.md  docker-compose.yml  error.md  graphrag_comparison_analysis.md  graphrag_kg_construction_verification.md  graphtog_vs_graphrag_indexing_comparison.md  prompt_analysis.md  start-dev.bat  start-dev.sh  test2.md  (+3 more)
.claude/: settings.local.json
.qwen/: settings.json
backend/: Dockerfile  pyproject.toml  pytest.ini
backend/app/: config.py  main.py  system_overview.md
backend/app/api/endpoints/: __init__.py  admin.py  advanced_features.py  analyze.py  auth.py  cache.py  communities.py  documents.py  queries.py  retrieval.py  tog.py  visualization.py
backend/app/db/: __init__.py  neo4j.py  postgres.py
backend/app/models/: document.py  embedding.py  query.py  user.py
backend/app/schemas/: auth.py  claim.py  document.py  entity_resolution.py  tog.py
backend/app/services/: advanced_extraction.py  auth.py  cache_service.py  chunking.py  community_detection.py  community_summarization.py  document_processor.py  embedding_service.py  entity_resolution.py  graph_service.py  llm_service.py  prompt.py  pruning_methods.py  query_service.py  retrieval_service.py  security.py  tog_analytics.py  tog_service.py  tog_visualization.py  visualization_service.py
backend/scripts/: export_neo4j.py
backend/tests/: README.md  __init__.py  conftest.py  test_endpoints_integration.py  test_entity_resolution.py  test_graphrag_fixes.py  test_incremental_indexing.py  test_performance.py
docs/: AUTH_FIX_SUMMARY.md  AUTH_TROUBLESHOOTING.md  PRD.md  (+27 more)
(+27 files in other folders)
